--- a/loan-calculator/index.html
+++ b/loan-calculator/index.html
@@ -35,6 +35,7 @@
                   <span class="input-group-addon">$</span>
                   <input
                     type="number"
+                    step=".01"
                     class="form-control"
                     id="amount"
                     placeholder="Loan Amount"
@@ -46,6 +47,7 @@
                   <span class="input-group-addon">%</span>
                   <input
                     type="number"
+                    step=".01"
                     class="form-control"
                     id="interest"
                     placeholder="Interest"
@@ -55,6 +57,7 @@
               <div class="form-group">
                 <input
                   type="number"
+                  step=".01"
                   class="form-control"
                   id="years"
                   placeholder="Years To Repay"
