--- a/chucknorrisjokes_https_cat/index.html
+++ b/chucknorrisjokes_https_cat/index.html
@@ -9,7 +9,18 @@
 </head>
 <body>
   <div class="container">
-    <h2>Chuck Norris Joke Generator</h2>
+    <h1>Chuck Norris Joke Generator</h1>
+    <div>
+      <h5>What are Chuck Norris Facts (Jokes)</h5>
+      <p>
+        Chuck Norris facts are satirical factoids about martial artist and actor Chuck Norris that have become an Internet phenomenon and as a result have become widespread in popular culture. The 'facts' are normally absurd hyperbolic claims about Norris' toughness, attitude, virility, sophistication, and masculinity.
+      </p>
+      <p>
+        Chuck Norris facts have spread around the world, leading not only to translated versions, but also spawning localized versions mentioning country-specific advertisements and other Internet phenomena. Allusions are also sometimes made to his use of roundhouse kicks to perform seemingly any task, his large amount of body hair with specific regard to his beard, and his role in the action television series Walker, Texas Ranger.
+      </p>
+      <p>
+        Source: <a href="https://api.chucknorris.io/">chucknorris.io</a>, which is the api used to general these jokes.
+      </p>
     <form>
       <div>
         <button class="random-joke">Get Random Joke</button>
@@ -39,6 +50,9 @@
       </div>
     </form>
     <ul class="jokes"></ul>
+
+      
+    </div>
   </div>
 
   <script src="app.js"></script>
